# tiantian-ai-guandan

./: README.md  guandan_app.pyw  main.py  pyproject.toml
.github/workflows/: ci.yml
guandan/: __init__.py  __main__.py  agent.py  app_launcher.py  calibration.py  card_counter.py  card_detector.py  card_extractor.py  card_recognition.py  card_template_generator.py  cli.py  combos.py  compare.py  decision_engine.py  game.py  game_screen_analyzer.py  game_specific_recognizer.py  game_state_parser.py  main.py  mode_detector.py  mode_strategy.py  models.py  overlay_display.py  realtime_controller.py  replay.py  screen_capture.py  screen_monitor.py  strategy.py  suggestion.py  ui.py  wild.py  window_finder.py
tests/: test_agent.py  test_calibration.py  test_card_counter.py  test_card_detector.py  test_card_extractor.py  test_card_recognition.py  test_card_template_generator.py  test_cli.py  test_combos.py  test_compare.py  test_decision_engine.py  test_game.py  test_game_screen_analyzer.py  test_game_specific_recognizer.py  test_game_state_parser.py  test_models.py  test_overlay_display.py  test_realtime_controller.py  test_replay.py  test_screen_capture.py  test_screen_monitor.py  test_strategy.py  test_suggestion.py  test_ui.py  test_wild.py
