[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiantian-ai-guandan"
version = "0.1.0"
description = "Guandan card game AI agent"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["guandan"]

[tool.coverage.report]
fail_under = 80
